Fix layout issues

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-
+body{
+  background-color:#fafafa!important;
+}
 .style-red-text{
   color: #e53935!important;
 }
@@ -18,4 +20,9 @@
 .md-drawer {
   width: 230px!important;
   max-width: calc(100vw - 125px)!important;
+  background-color: white!important;
+  color:#2c3e50!important;
+}
+.md-list-item-content{
+  color:#2c3e50!important;
 }
